[package]
name = "bevy_ui_play"
version = "0.1.0"
edition = "2021"
default-run ="main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.2"
bevy_obj = "0.12.1"
lazy_static = "1.4.0"
seldom_fn_plugin = "0.6.0"


 bevy_kira_audio = {version="0.19", features = ["ogg"]}


[[bin]]
name = "main"
path = "src/main.rs"

 
